<resources>
    <string name="app_name">homeWork_2.1</string>
    <string name="name">Расчет параболы</string>
    <string name="a">Введите a</string>
    <string name="b">Введите b</string>
    <string name="c">Введите c</string>
    <string name="choice">Введите </string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="countY">Рассчитать Y</string>
    <string name="countX">Рассчитать X</string>
    <string name="warning">Число не может равняться 0!</string>
</resources>
