<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.toma.homework_23.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/size1"
        android:textColor="@color/textColor"
        android:id="@+id/head1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:textSize="@dimen/size1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/finalData" />

    <TextView
        android:text="@string/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size1"
        android:id="@+id/a"
        android:layout_below="@+id/head1"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/b"
        android:textSize="@dimen/size1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b"
        android:layout_below="@+id/a"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:text="@string/c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size1"
        android:id="@+id/c"
        android:layout_below="@+id/b"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="@dimen/size2"
        android:layout_height="@dimen/size1"
        android:id="@+id/editA"
        android:inputType="numberDecimal"
        android:layout_alignBottom="@+id/a"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice"
        android:textSize="@dimen/size1"
        android:id="@+id/head2"
        android:layout_below="@+id/c"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="@dimen/size2"
        android:layout_height="@dimen/size1"
        android:ems="5"
        android:inputType="numberDecimal"
        android:id="@+id/editB"
        android:layout_alignTop="@+id/b"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="@dimen/size2"
        android:layout_height="@dimen/size1"
        android:ems="5"
        android:inputType="numberDecimal"
        android:id="@+id/editYear"
        android:layout_alignTop="@+id/c"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/head2"
        android:layout_alignParentEnd="true" />

</RelativeLayout>